Changelog
=========

2.2.1 (unreleased)
------------------

- Re-apply eleddy's "Revert modification date since this is fixed in
  p.a.caching now." as her commit was lost later on due to some git magic.
  [thet]

- Remove submitting the controlpanel form again after removing disabled tags
  fixes #13037 and #12357
  [maartenkling]

- Remove inline styles, fixes #12399
  [maartenkling]

- add fallback border color for i8, fixes #11324
  [maartenkling]

- Replace discussionitem_icon.gif with png version.
  [timo]

- Fix catalog updates for IObjectMovedEvent
  [gaudenz]

- Fix non-functioning user_notification feature
  [izak]


2.2.0 (2012-08-30)
------------------

- Refactor the comment creator/author_name to comply with the Plone core
  convention to store the username on the creator attribute and not the
  fullname.
  [timo]

- Rename the id of the text widgets because there can be css-id clashes with
  the text field of documents when using TinyMCE in overlays or multiple
  instances of TinyMCE on a single page.
  [timo]

- text/html added to the possible mime types for comments.
  [timo]

- Make 'text/plain' the default mime type for comments and make sure the
  default type is set properly when creating a new comment.
  [timo]

- Fix handling of comments with invalid transforms. Write an error msg
  to the log and just return the untransformed text.
  [timo]


2.1.8 (unreleased)
------------------

- Support for Dexterity added. The conversation enabled method now detects and
  supports Dexterity-based content types.
  [timo]

- No more recursive came_from redirection after logged_in.
  [kcleong, huubbouma]

- Danish translation updated.
  [stonor]

- Documentation and howtos updated.
  [timo]

- Remove development buildout files and directories.
  [timo]


2.1.7 (2012-06-29)
------------------

- Prune duplicated test code.
  [pjstevns]

- Update version in buildout.cfg to allow development.
  [pjstevns]
