@@ -4,6 +4,10 @@ Changelog
 2.2.1 (unreleased)
 ------------------
 
+- For migrations of comments without a valid old_status, apply the 'published'
+  state.
+  [thet]
+
 - Re-apply eleddy's "Revert modification date since this is fixed in
   p.a.caching now." as her commit was lost later on due to some git magic.
   [thet]
